--- a/pom.xml
+++ b/pom.xml
@@ -11,12 +11,14 @@
     <version>4.20.0</version> <!-- Or the latest available -->
 </dependency>
 
-<dependency>
-    <groupId>org.testng</groupId>
-    <artifactId>testng</artifactId>
-    <version>7.7.1</version> <!-- use latest version -->
-    <scope>test</scope>
-</dependency>
+
+    <dependency>
+        <groupId>org.testng</groupId>
+        <artifactId>testng</artifactId>
+        <version>7.8.0</version>
+        <scope>test</scope>
+    </dependency>
+
 
 
 <!-- https://mvnrepository.com/artifact/org.apache.poi/poi -->
